Fix awkward overflow text breaks in id column of multi-pipeline-graph-view (#340)

--- a/src/main/frontend/multi-pipeline-graph-view/app.scss
+++ b/src/main/frontend/multi-pipeline-graph-view/app.scss
@@ -3,5 +3,5 @@
 }
 
 .pgw-user-specified-text {
-  overflow-wrap: anywhere;
+  overflow-wrap: break-word;
 }
